# final-project-level3-recsys-10

./: .gitignore  README.md  final.yaml  package-lock.json  크롤링.ipynb
EDA/: EDA_1.ipynb  EDA_pharmacy.ipynb  sample_infra_data.ipynb  sample_inter_user.ipynb  sample_item.ipynb  공원_데이터가공.ipynb  상가_데이터가공.ipynb  약국_데이터가공.ipynb  영화관_데이터가공.ipynb  지하철_데이터가공.ipynb
data_engineering/: pyproject.toml
data_engineering/crawling/airflow/: README.md  classify_house_by_grid.py  config.py  dong_crawling.py  requirements.txt
data_engineering/crawling/airflow/dags/: zigbang_crawl_dags.py
data_engineering/grid/: classify_house_by_grid.ipynb  get_grid.py  indexing_infra.ipynb
data_engineering/grid/output/: get_grid_score.ipynb
docs/: .gitmessage.txt
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/Components/: Badge.tsx  Card.tsx  Dropdown.tsx  Sidebar.tsx  SimpleListCard.tsx
grid/: get_grid.py
modeling/: args.py  cal_distance.py  dataset.py  inference.py  model.py  rules_based.py  train.py  utils.py
modeling/RecBole/: requirements.txt  run_inference.py  run_recbole.py
webserver/: docker-compose.yml
webserver/backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
webserver/backend/app/: main.py
webserver/backend/app/apis/: test.py
webserver/backend/app/core/: config.py
webserver/backend/app/crud/: crud_test.py  hobbang_crud_test.py  schemas.py
webserver/backend/app/db/: connection.py  session.py
webserver/backend/app/db/models/: hobbang_model.py  test_model.py
webserver/backend/app/logging/: log.ini
webserver/backend/app/recommend/: ML.py  args.py  content_based_filtering.py  rule_based.py
webserver/backend/app/routers/: map.py  recommend.py  test.py  users.py  zzim.py
webserver/backend/app/routes/: test.py
webserver/frontend/: Dockerfile  README.md  SessionState.py  app.py  nohup.out  packagelist.txt  requirements.txt  st_login.py  user_sample.yaml  utils.py  yujin_st_login.py
webserver/frontend_react/: README.md  package-lock.json  package.json  tailwind.config.js
(+128 files in other folders)
