[tool.poetry]
name = "test-fastapi"
version = "0.1.0"
description = "FastAPI Test"
authors = ["hobbang2 <cattie@pukyong.ac.kr>"]
license = "MIT"
readme = "README.md"
packages = [{include = "test_fastapi"}]

[tool.poetry.dependencies]
python = ">=3.6.2,<3.10"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
pandas = "1.0.0"
pydantic = "1.7.4"
sqlalchemy = "^1.4.46"
python-dotenv = "0.20"
pymysql = "^1.0.2"
geoalchemy2 = "^0.9.2"
bcrypt = "^4.0.1"
scikit-learn = "0.24.2"
ray = {extras = ["tune"], version = "^2.2.0"}
torch = "1.10.0"
colorlog = "^6.7.0"
tqdm = "^4.64.1"
tensorboard = "2.10.0"
thop = "^0.1.1.post2209072238"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
black = "^21.9b0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
